--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3-cloud": "^1.2.1",
     "debug": "^2.2.0",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^3.6.2",
     "jquery": "^3.1.1",
     "jquery-ui": "^1.12.1",
     "leaflet": "^1.0.2",
